--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_core: ^4.2.1
   cloud_firestore: ^6.0.3
   firebase_auth: ^6.1.2
+  firebase_messaging: ^16.0.4
 
 dev_dependencies:
   flutter_test:
